# coyote

./: .gitignore  CMakeLists.txt  example_config.yaml  readme.txt
include/: collision_kernel_class.hpp  decay_kernel_class.hpp  error.hpp  front_screen_class.hpp  geometry_class.hpp  material_class.hpp  parser.hpp  particle_class.hpp  population_control_class.hpp  random_class.hpp  region_class.hpp  ressources.hpp  scores_class.hpp  settings.hpp  simulation_class.hpp  source_class.hpp  static_collision_kernel_class.hpp  static_population_control.hpp  static_scores_class.hpp  static_simulation_class.hpp  tally.hpp  vector_class.hpp
sources/: collision_kernel_class.cpp  decay_kernel_class.cpp  error.cpp  front_screen_class.cpp  geometry_class.cpp  main.cpp  material_class.cpp  parser.cpp  particle_class.cpp  population_control_class.cpp  random_class.cpp  region_class.cpp  ressources.cpp  scores_class.cpp  settings.cpp  simulation_class.cpp  source_class.cpp  tally.cpp  vector_class.cpp
sources/static/: static_collision_kernel_class.cpp  static_population_control.cpp  static_scores_class.cpp  static_simulation_class.cpp
